Feat: 혈당,음식 레이아웃 추가
home 화면에서 구체적으로 들어가는 혈당,음식 레이아웃 추가함
혈당부분은 리사이클뷰를 통해 리스트 구현함
흠식파트 검색 레이아웃은 자동 검색어가 구현 됨

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "makerenew"
-include ':app'
+include ':app', 'miband-sdk-kotiln'
+include ':miband-sdk-kotlin'
