--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.makerenew">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,9 +16,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Makerenew">
         <activity
-            android:name=".Signup"
+            android:name=".glucose_plus"
             android:exported="false" />
-        <!-- <activity -->
+        <activity
+            android:name=".glucose_bluetooth"
+            android:exported="false" />
+        <activity
+            android:name=".glucose_graph"
+            android:exported="false" />
+        <activity
+            android:name=".glucose_calander"
+            android:exported="false" />
+        <activity
+            android:name=".Glucose"
+            android:exported="false" />
+        <activity
+            android:name=".Signup"
+            android:exported="false" /> <!-- <activity -->
         <!-- android:name=".Splash" -->
         <!-- android:exported="false" /> -->
         <activity
@@ -26,6 +46,7 @@
         </activity> <!-- Splash Activity -->
         <activity android:name=".MainActivity" />
         <activity android:name=".Login_activity" />
+        <activity android:name=".MainActivity2" />
 
         <meta-data
             android:name="preloaded_fonts"
