--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Makerenew">
         <activity
+            android:name=".FoodSelectActivity"
+            android:exported="false" />
+        <activity
             android:name=".FoodValueActivity"
             android:exported="false" />
         <activity
